# Shared ruff configuration for Python code under tests/.
# Individual projects (python_client, restful_client_v2) extend this via
# `[tool.ruff] extend = "../pyproject.toml"`. Loose scripts under tests/scripts
# inherit via ruff's upward discovery.
#
# This file intentionally has no [project] section; it is tool config only.

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    ".venv",
    "assets",
    "cdc/assets",
    "benchmark",
    "restful_client",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long — deferred to formatter
    "B008",   # function call in default arg — common for pytest fixtures/Depends
    "SIM117", # nested with — test assertions often need this form
    # Wildcard imports are an accepted test-code convention here: the heavy
    # `from utils.util_pymilvus import *` / `from common.constants import *`
    # patterns save boilerplate across hundreds of test cases. The source
    # modules declare `__all__` so consumers still have a documented API.
    "F403",
    "F405",
    # `pytest.raises(Exception)` is a deliberate pattern here: many tests
    # assert that an operation fails without pinning the exact exception
    # type (stability over time). Narrowing would be misleading.
    "B017",
]

[tool.ruff.lint.per-file-ignores]
"**/conftest.py" = ["F401"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
